--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "18.0.5",
     "@nx/eslint": "18.0.5",
     "@nx/eslint-plugin": "18.0.5",
     "@nx/jest": "18.0.5",
     "@nx/js": "18.0.5",
     "@nx/next": "18.0.5",
+    "@nx/react": "18.0.5",
+    "@nx/vite": "18.0.5",
+    "@nx/web": "18.0.5",
     "@nx/workspace": "18.0.5",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
@@ -27,6 +32,8 @@
     "@types/react-dom": "18.2.14",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "@vitejs/plugin-react": "^4.2.0",
+    "@vitest/ui": "^1.3.1",
     "babel-jest": "^29.4.1",
     "cypress": "13.6.4",
     "eslint": "~8.48.0",
@@ -39,11 +46,15 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jsdom": "~22.1.0",
     "nx": "18.0.5",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.3.2"
+    "typescript": "~5.3.2",
+    "vite": "~5.0.0",
+    "vite-plugin-dts": "~2.3.0",
+    "vitest": "^1.3.1"
   }
 }
