--- a/package.json
+++ b/package.json
@@ -20,9 +20,17 @@
     "@nx/js": "18.0.5",
     "@nx/next": "18.0.5",
     "@nx/react": "18.0.5",
+    "@nx/storybook": "18.0.5",
     "@nx/vite": "18.0.5",
     "@nx/web": "18.0.5",
     "@nx/workspace": "18.0.5",
+    "@storybook/addon-essentials": "7.6.17",
+    "@storybook/addon-interactions": "^7.5.3",
+    "@storybook/core-server": "7.6.17",
+    "@storybook/jest": "^0.2.3",
+    "@storybook/react-vite": "7.6.17",
+    "@storybook/test-runner": "^0.13.0",
+    "@storybook/testing-library": "^0.2.2",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
@@ -50,6 +58,7 @@
     "nx": "18.0.5",
     "prettier": "^2.6.2",
     "sass": "1.62.1",
+    "storybook": "7.6.17",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
