--- a/libs/ui/cozy-ui/package.json
+++ b/libs/ui/cozy-ui/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@brr-dev/libs/ui/cozy-ui",
-  "version": "0.0.1",
-  "main": "./index.js",
-  "types": "./index.d.ts",
-  "exports": {
-    ".": {
-      "import": "./index.mjs",
-      "require": "./index.js"
+    "name": "@bramirez96/cozy-ui",
+    "version": "0.0.1",
+    "main": "./index.js",
+    "types": "./index.d.ts",
+    "exports": {
+        ".": {
+            "import": "./index.mjs",
+            "require": "./index.js"
+        }
     }
-  }
 }
