--- a/package.json
+++ b/package.json
@@ -1,69 +1,78 @@
 {
-  "name": "@brr-dev/source",
-  "version": "0.0.0",
-  "license": "MIT",
-  "scripts": {},
-  "private": true,
-  "dependencies": {
-    "next": "14.0.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.14.5",
-    "@babel/preset-react": "^7.14.5",
-    "@nx/cypress": "18.0.5",
-    "@nx/eslint": "18.0.5",
-    "@nx/eslint-plugin": "18.0.5",
-    "@nx/jest": "18.0.5",
-    "@nx/js": "18.0.5",
-    "@nx/next": "18.0.5",
-    "@nx/react": "18.0.5",
-    "@nx/storybook": "18.0.5",
-    "@nx/vite": "18.0.5",
-    "@nx/web": "18.0.5",
-    "@nx/workspace": "18.0.5",
-    "@storybook/addon-essentials": "7.6.17",
-    "@storybook/addon-interactions": "^7.5.3",
-    "@storybook/core-server": "7.6.17",
-    "@storybook/jest": "^0.2.3",
-    "@storybook/react-vite": "7.6.17",
-    "@storybook/test-runner": "^0.13.0",
-    "@storybook/testing-library": "^0.2.2",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@types/jest": "^29.4.0",
-    "@types/node": "18.16.9",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "@vitejs/plugin-react": "^4.2.0",
-    "@vitest/ui": "^1.3.1",
-    "babel-jest": "^29.4.1",
-    "cypress": "13.6.4",
-    "eslint": "~8.48.0",
-    "eslint-config-next": "14.0.4",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-cypress": "^2.13.4",
-    "eslint-plugin-import": "2.27.5",
-    "eslint-plugin-jsx-a11y": "6.7.1",
-    "eslint-plugin-react": "7.32.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
-    "jsdom": "~22.1.0",
-    "nx": "18.0.5",
-    "prettier": "^2.6.2",
-    "sass": "1.62.1",
-    "storybook": "7.6.17",
-    "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
-    "typescript": "~5.3.2",
-    "vite": "~5.0.0",
-    "vite-plugin-dts": "~2.3.0",
-    "vitest": "^1.3.1"
-  }
+    "name": "@bramirez96/brr-dev",
+    "version": "0.0.1",
+    "license": "MIT",
+    "scripts": {},
+    "private": true,
+    "dependencies": {
+        "next": "14.0.4",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-icons": "^5.0.1",
+        "tslib": "^2.3.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.14.5",
+        "@babel/preset-react": "^7.14.5",
+        "@nx/cypress": "18.0.5",
+        "@nx/eslint": "18.0.5",
+        "@nx/eslint-plugin": "18.0.5",
+        "@nx/jest": "18.0.5",
+        "@nx/js": "18.0.5",
+        "@nx/next": "18.0.5",
+        "@nx/react": "18.0.5",
+        "@nx/storybook": "18.0.5",
+        "@nx/vite": "18.0.5",
+        "@nx/web": "18.0.5",
+        "@nx/workspace": "18.0.5",
+        "@storybook/addon-essentials": "7.6.17",
+        "@storybook/addon-interactions": "^7.5.3",
+        "@storybook/addon-links": "^7.6.17",
+        "@storybook/core-server": "7.6.17",
+        "@storybook/jest": "^0.2.3",
+        "@storybook/nextjs": "^7.6.17",
+        "@storybook/react-vite": "7.6.17",
+        "@storybook/test-runner": "^0.13.0",
+        "@storybook/testing-library": "^0.2.2",
+        "@swc-node/register": "~1.8.0",
+        "@swc/core": "~1.3.85",
+        "@swc/helpers": "~0.5.2",
+        "@types/jest": "^29.4.0",
+        "@types/node": "18.16.9",
+        "@types/react": "18.2.33",
+        "@types/react-dom": "18.2.14",
+        "@typescript-eslint/eslint-plugin": "^6.13.2",
+        "@typescript-eslint/parser": "^6.13.2",
+        "@vitejs/plugin-react": "^4.2.0",
+        "@vitest/ui": "^1.3.1",
+        "babel-jest": "^29.4.1",
+        "cypress": "13.6.4",
+        "eslint": "~8.48.0",
+        "eslint-config-next": "14.0.4",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-cypress": "^2.13.4",
+        "eslint-plugin-import": "2.27.5",
+        "eslint-plugin-jsx-a11y": "6.7.1",
+        "eslint-plugin-react": "7.32.2",
+        "eslint-plugin-react-hooks": "4.6.0",
+        "jest": "^29.4.1",
+        "jest-environment-jsdom": "^29.4.1",
+        "jest-environment-node": "^29.4.1",
+        "jsdom": "~22.1.0",
+        "nx": "18.0.5",
+        "prettier": "^2.6.2",
+        "sass": "1.62.1",
+        "storybook": "7.6.17",
+        "storybook-dark-mode": "^3.0.3",
+        "ts-jest": "^29.1.0",
+        "ts-node": "10.9.1",
+        "typescript": "~5.3.2",
+        "verdaccio": "^5.0.4",
+        "vite": "~5.0.0",
+        "vite-plugin-dts": "~2.3.0",
+        "vitest": "^1.3.1"
+    },
+    "nx": {
+        "includedScripts": []
+    }
 }
